@@ -17,23 +17,20 @@
 package org.greenbuttonalliance.gbaresourceserver.usage.web.controller;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.greenbuttonalliance.gbaresourceserver.usage.model.IntervalBlock;
 import org.greenbuttonalliance.gbaresourceserver.usage.service.IntervalBlockService;
 import org.greenbuttonalliance.gbaresourceserver.usage.web.controller.exception.EntityNotFoundByIdException;
+import org.greenbuttonalliance.gbaresourceserver.usage.web.dto.IdentifiedObjectDto;
 import org.greenbuttonalliance.gbaresourceserver.usage.web.dto.IntervalBlockDto;
-import org.greenbuttonalliance.gbaresourceserver.usage.model.IntervalBlock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Just a starting point for the API team, feel free to modify/delete as needed
@@ -64,6 +61,7 @@ import java.util.stream.Collectors;
  */
 @RestController
 @Transactional
+@Slf4j
 @RequestMapping(path = "/espi/1_1/resource/IntervalBlock", produces = MediaType.APPLICATION_ATOM_XML_VALUE)
 @ResponseStatus(HttpStatus.OK)
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
@@ -71,15 +69,27 @@ public class IntervalBlockController {
 	private final IntervalBlockService intervalBlockService;
 
 	@GetMapping
-	public List<IntervalBlockDto> getAll() {
-		return intervalBlockService.findAll().stream()
-			.map(IntervalBlockDto::fromIntervalBlock)
-			.collect(Collectors.toList());
+	public String getAll() {
+		List<IntervalBlockDto> listIntervalBlockDto = intervalBlockService.findAll().stream()
+			.map(IntervalBlockDto::fromIntervalBlock).toList();
+
+		StringBuilder contentSB = new StringBuilder();
+
+		for(IntervalBlockDto intervalBlockDto : listIntervalBlockDto) {
+			String content = intervalBlockDto.getContent();
+			contentSB.append(intervalBlockDto.addEntryWrapper("IntervalBlock", content));
+		}
+		return IdentifiedObjectDto.addParentWrapper(contentSB.toString(), "IntervalBlock");
 	}
 
 	@GetMapping("/{uuid}")
-	public IntervalBlockDto getByUuid(@PathVariable UUID uuid) {
+	public String getByUuid(@PathVariable UUID uuid) {
+
 		IntervalBlock intervalBlock = intervalBlockService.findByUuid(uuid).orElseThrow(() -> new EntityNotFoundByIdException(IntervalBlock.class, uuid));
-		return IntervalBlockDto.fromIntervalBlock(intervalBlock);
+		IntervalBlockDto singleIntervalBlockDto = IntervalBlockDto.fromIntervalBlock(intervalBlock);
+
+		String content = singleIntervalBlockDto.getContent();
+
+		return singleIntervalBlockDto.addEntryWrapper("IntervalBlock", content);
 	}
 }
